bevy_asset_loader/tests/ui/non_default.stderr
error[E0277]: the trait bound `NoDefault: Default` is not satisfied
   --> $DIR/non_default.rs:6:10
    |
6   | #[derive(AssetCollection)]
    |          ^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefault`
    |
note: required by `std::default::Default::default`
   --> $DIR/default.rs:116:5
    |
116 |     fn default() -> Self;
    |     ^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the derive macro `AssetCollection` (in Nightly builds, run with -Z macro-backtrace for more info)
